[gd_scene load_steps=5 format=2]

[ext_resource path="res://combat_arena/CombatArena.gd" type="Script" id=1]
[ext_resource path="res://combat_arena/enemy_formation/EnemyFormation.tscn" type="PackedScene" id=2]
[ext_resource path="res://combat_arena/gui/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://combat_arena/states/BeginTurn.gd" type="Script" id=4]

[node name="CombatArena" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

[node name="TurnQueue" type="Node" parent="."]

[node name="EnemyFormation" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="BeginTurn" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="closed_textbox" from="GUI" to="." method="_on_GUI_closed_textbox"]
